--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -11,24 +11,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
       - name: Install dependencies (Linux)
-        if: runner.os == 'Linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y \
             gcc make \
             yq diffutils
-
-      - name: Install dependencies (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install gcc make yq diffutils
 
       - name: Build project
         run: make
@@ -36,7 +30,7 @@ jobs:
       - name: Run test suite
         run: |
           chmod +x tests/tester.sh
-          ./tests/tester.sh || (echo "Tests failed, saving outputs…" && exit 1)
+          ./tests/tester.sh
 
       - name: Upload test outputs
         if: failure()
@@ -44,3 +38,4 @@ jobs:
         with:
           name: test-outputs-${{ matrix.os }}
           path: tests/outputs/
+          if-no-files-found: ignore
